<resources>
    <string name="app_name">Карта обращений города Ош</string>
    <string name="app_name_short">OshCity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incident_fixed">Исправлено</string>
    <string name="incident_not_fixed">Не исправлено</string>
    <string name="text_categories">Категории</string>
    <string name="done">Готово</string>
    <string name="add_category">Добавить категорию</string>
    <string name="add">Добавить</string>
    <string name="select">Выбрать</string>
    <string name="selected">Выбрано:</string>
    <string name="tv_0_category">Выбрано: 0</string>
    <string name="submit">Отправить</string>
    <string name="sender">Отправитель</string>
    <string name="required">Заполните поле</string>
    <string name="ctg_required">Выберите категорию</string>
    <string name="sending">Отправка</string>
    <string name="send_incident">Отправить сообщение</string>
    <string name="person_name">Имя, фамилия</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="all">Все</string>
    <string name="solved">Исправленные</string>
    <string name="not_solved">Не исправленные</string>
    <string name="loading">Загрузка</string>
    <string name="status">Статус</string>
    <string name="text_search">Поиск по тексту</string>
    <string name="login_register">Вход/Регистрация</string>
    <string name="about">О проекте</string>
    <string name="feedback">Обратная связь</string>
    <string name="news">Новости</string>
    <string name="message">Сообщение</string>
    <string name="feedback_success">Ваше сообщение отправлено</string>
    <string name="feedback_fail">Не удалось отправить сообщеине, попробуйте ещё раз</string>
    <string name="title_activity_login">Вход</string>
    <string name="close">Закрыть</string>
    <string name="my_account">Личный кабинет</string>
    <string name="incidents">Обращения</string>
    <string name="my_incidents">Мои сообщения</string>
    <string name="logout">Выйти</string>
    <string name="menu">Меню</string>
    <string name="app_error">Произошла ошибка</string>
    <string name="short_title">Краткое название</string>
    <string name="full_description">Подробное описание</string>
    <string name="date_time">Дата и время:</string>
    <string name="your_location">Уточните местоположение (адрес)</string>
    <string name="news_link">Ссылка на новость (необязательно)</string>
    <string name="video_link">Ссылка на видео (необязательно)</string>
    <string name="add_image">Добавить фото</string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="reload">Перезагрузить</string>
    <string name="comments">Комментарии</string>
    <string name="add_comment">Довабить комментарий</string>
    <string name="rating">Достоверность:</string>
    <string name="no_result">Ничего не найдено</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="on_map">На карте</string>
    <string name="set_location">Укажите на карте</string>
    <string name="push_notification">Уведомление:</string>
    <string name="not_active">Спасибо, сообщение было отправлено на рассмотрение. В случае необходимости, мы обязательно свяжемся с вами.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="action_sign_in">Вход или регистрация</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Неверно указан email</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_password_match">Пароли не совподают</string>
    <string name="error_incorrect_password">Неверно указан пароль</string>
    <string name="error_field_required">Заполните поле</string>
    <string name="register">Регистрация</string>
    <string name="permission_rationale">Требуется разрешение к контактам для автозаполнения почты.</string>
    <string name="login_fail">Ошибка при авторизации</string>
    <string name="user_not_found">Такой email не зарегистрирован</string>
    <string name="password_error">Неверный пароль</string>
    <string name="email_taken">Пользователь с такой почтой уже зарегистрирован</string>
    <string name="lang">Язык</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_ky">Кыргызча</string>
    <string name="list">Список</string>
    <string name="home">Главная</string>
    <string name="add_incident">Отправить обращение</string>
    <string name="incident_list">Список обращений</string>
    <string name="map">Карта</string>
    <string name="back">Назад</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="legal_info">Legal Info</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map_demo_label">Basic Map</string>
    <string name="basic_map_demo_description">Launches a map.</string>
    <string name="buildings">Buildings</string>
    <string name="camera_demo_label">Camera</string>
    <string name="camera_demo_description">Demonstrates camera functions.</string>
    <string name="circle_demo_label">Circles</string>
    <string name="circle_demo_description">Demonstrates how to add Circles to a map.</string>
    <string name="camera_clamping_demo_label">Camera Clamping</string>
    <string name="camera_clamping_demo_description">Demonstrates how to constrain the camera to specific boundaries and zoom levels.</string>
    <string name="clamp_latlng_adelaide">Clamp to Adelaide</string>
    <string name="clamp_latlng_pacific">Clamp to Pacific</string>
    <string name="clamp_latlng_reset">Reset LatLng Bounds</string>
    <string name="clamp_min_zoom">MinZoom++</string>
    <string name="clamp_max_zoom">MaxZoom--</string>
    <string name="clamp_zoom_reset">Reset Zoom Bounds</string>
    <string name="clear_map">Clear</string>
    <string name="clickable">Clickable</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="duration">Custom Duration</string>
    <string name="hue">Hue</string>
    <string name="events_demo_label">Events</string>
    <string name="events_demo_description">Demonstrates event handling.</string>
    <string name="fade_in">Fade In Tiles</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="flat">Flat</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_santorini">Go to Santorini</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="ground_overlay_demo_label">Ground Overlays</string>
    <string name="ground_overlay_demo_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>


        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="location_source_demo_label">Location Source Demo</string>
    <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_in_pager_demo_label">Map In Pager</string>
    <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
    <string name="marker_demo_label">Markers</string>
    <string name="marker_close_info_window_on_retap_demo_label">Marker Close Info Window on Retap</string>
    <string name="marker_close_info_window_on_retap_demo_description">Demonstrates how to close the info window when the currently selected marker is retapped.</string>
    <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="multi_map_demo_label">Multiple Maps</string>
    <string name="multi_map_demo_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="my_location">My Location</string>
    <string name="my_location_demo_label">My Location Demo</string>
    <string name="my_location_demo_description">Demonstrates how to use GMS Location.</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="options_demo_label">Options</string>
    <string name="options_demo_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo_label">Polylines</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo_label">Programmatically add map</string>
    <string name="programmatic_demo_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="properties_sydney_polyline">Properties for Sydney Polyline</string>
    <string name="properties_sydney_polygon">Properties for Sydney Polygon</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_map_view_demo_label">Raw MapView</string>
    <string name="raw_map_view_demo_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map_demo_label">Retain map</string>
    <string name="retain_map_demo_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="rotation">Rotation:</string>
    <string name="satellite">Satellite</string>
    <string name="save_state_demo_label">Save the state of a MapFragment.</string>
    <string name="save_state_demo_description">Demonstrates how to save the state of a MapFragment upon rotation of the device.</string>
</resources>