<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kg.prosoft.oshmapreport.RegisterActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/id_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/id_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/id_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:maxLines="1" />

            <EditText
                android:id="@+id/id_reg_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:maxLines="1" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_view_click"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
