<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="kg.prosoft.oshmapreport.FeedbackActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_et_fb_name"
                android:hint="@string/name"
                android:background="@color/white"
                android:padding="5dp"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_et_fb_email"
                android:hint="E-mail"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:padding="5dp"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_et_fb_phone"
                android:hint="@string/phone"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:padding="5dp"
                android:inputType="phone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_et_fb_message"
                android:hint="@string/message"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:padding="5dp"
                android:inputType="textMultiLine"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_btn_submit_fb"
                android:layout_marginTop="17dp"
                android:background="@drawable/blue_view_click"
                android:text="@string/submit"
                android:onClick="sendFeedback"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
