<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky"
    tools:context="kg.prosoft.oshmapreport.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingTop="20dp"
                android:src="@drawable/map_logo_origi"
                android:id="@+id/imageView3" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/id_ll_add"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="20dp"
                        android:tint="@color/white"
                        android:background="@drawable/blue_view_click"
                        android:src="@drawable/ic_send_black_72dp" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/add_incident"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_ll_list"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="20dp"
                        android:tint="@color/white"
                        android:background="@drawable/red_view_click"
                        android:src="@drawable/ic_list_black_72dp"/>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/incident_list"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/id_ll_map"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="20dp"
                        android:tint="@color/white"
                        android:background="@drawable/green_view_click"
                        android:src="@drawable/ic_map_black_72dp" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/map"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/id_ll_news"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="20dp"
                        android:tint="@color/white"
                        android:background="@drawable/orange_view_click"
                        android:src="@drawable/ic_art_track_black_72dp"/>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/news"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
